<resources>

    <string name="app_name">Iotekprotector</string>
	<string name="phone_intercept_head">已拦截的电话信息如下：</string>
	<string name="phone_intercept_ht">&#160;请输入需要拦截的号码</string>
	<string name="phone_intercept_btn">添加号码</string>
	<string name="phone_intercept_appname">安全卫士</string>
	<string name="delete_self">删除本条拦截记录</string>
	<string name="delete_num">删除该号码拦截记录</string>
	<string name="delete_free">从黑名单中移除此号码</string>
	<string name="add_black">从联系人列表中添加</string>
	<string name="query_black">查看黑名单</string>
	<string name="msg_intercept_head">已拦截的短信信息如下：</string>
	<string name="msg_intercept_ht">请输入需要拦截的号码</string>
	<string name="msg_intercept_appname">短信拦截信息</string>
	<string name="preference_head_set">设置拦截模式</string>
	<string name="preference_phone_set">电话拦截模式</string>
	<string name="preference_msg_set">短信拦截模式</string>
	<string name="preference_phone_detail">设置对于电话拦截所执行的操作</string>
	<string name="preference_msg_detail">设置对于短信拦截所执行的操作</string>
	<string name="preference_state_set">拦截模式状态</string>
	<string name="preference_head_state">拦截服务状态设置</string>
	<string name="preference_state_open">打开</string>
	<string name="preference_state_close">关闭</string>
	<string name="preference_voice_set">悬浮窗设置</string>
	<string name="preference_voice_choice">悬浮窗状态设置</string>
	<string name="menu_phone">电话拦截</string>
	<string name="menu_msg">短信拦截</string>
	<string name="menu_set">拦截策略</string>
	<string name="menu_flow">流量设置</string>
	<string name="menu_code">密码设置</string>
	<string name="block_id">编号</string>
	<string name="block_num">号码</string>
	<string name="block_kind">类别</string>
	<string name="code_point_view">用来显示九宫图上面的格子</string>
	<string name="content_name">姓名</string>
	<string name="content_num">号码</string>
	<string name="content_state">状态</string>
	<string name="content_select_all">全选</string>
	<string name="content_unselect_all">取消</string>
	<string name="content_add_btn">增加</string>
	<string name="flow_item_img">用于显示程序图标</string>
	<string name="flow_main_head">流量统计</string>
	<string name="flow_notice_enough">总结：本月剩余流量充足，请放心使用</string>
	<string name="flow_notice_3G">2G/3G</string>
	<string name="flow_main_percent">0%</string>
	<string name="flow_notice_today">今日已用(M)：</string>
	<string name="flow_notice_month">本月已用(M)：</string>
	<string name="flow_notice_remain">本月剩余(M)：</string>
	<string name="flow_num">0.00</string>
	<string name="flow_main_showList">查看流量详情</string>
	<string name="flow_main_back">返回</string>
	<string name="flow_main_history">查看历史记录</string>
	<string name="flow_main_meal">设置</string>
	<string name="flow_set_head">请输入所使用的流量套餐</string>
	<string name="flow_M">M</string>
	<string name="flow_set_input">请输入可用流量大小</string>
	<string name="flow_item_uploadBf">上传</string>
	<string name="flow_item_downloadBf">下载</string>
	<string name="flow_item_totalBf">总计</string>
	<string name="flow_history_dayBf">时间：</string>
	<string name="flow_history_flowBf">流量（M）:</string>
	<string name="code">配置选项密码验证</string>
	<string name="code_">应用锁密码验证</string>
	<string name="code_hint">请输入密码</string>
	<string name="lock_ok">确认</string>
	<string name="lock_cancel">取消</string>
	<string name="preference_lock_head">程序锁设置</string>
	<string name="preference_lock_set">程序锁状态设置</string>
	<string name="menu_lock">程序加锁</string>
	<string name="lock_icon">图标</string>
	<string name="lock_name">名称</string>
	<string name="lock_state">是否加锁</string>
	<string name="lock_update">更新数据</string>
	<string name="lock_title">软件加锁</string>
	<string name="ok_btn">确&#160;认&#160;密&#160;码</string>
	<string name="pintercept_title">电话拦截箱</string>
	<string name="smsintercept_title">短信拦截箱</string>
	<string name="content_title">联系人列表</string>
	<string name="preference_title">选项设置</string>
	<string name="black_title">黑名单</string>
	
</resources>