<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/title_bg"
        android:gravity="center" >

        <TextView
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/content_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/content_name"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/content_num"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/content_state"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:divider="@drawable/line"
        android:scrollingCache="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/content_select_all"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/g_btn"
            android:text="@string/content_select_all"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/content_unselect_all"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:background="@drawable/g_btn"
            android:text="@string/content_unselect_all"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/content_add_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:background="@drawable/g_btn"
            android:text="@string/content_add_btn"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>