<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/title_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/flow_main_head"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/flow_main_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/back"
            android:text="@string/flow_main_back"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <Button
            android:id="@+id/flow_main_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/flow_main_back"
            android:layout_alignBottom="@+id/flow_main_back"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/flow_g_normal"
            android:text="@string/flow_main_meal"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/flow_main_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/flow_notice_enough"
        android:textColor="#07ff00" />

    <TextView
        android:id="@+id/flow_main_3G"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/flow_line"
        android:padding="1dp"
        android:text="@string/flow_notice_3G" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <ProgressBar
            android:id="@+id/flow_main_progressBar"
            style="@style/HBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="25dp"
            android:indeterminateDrawable="@drawable/progress_anim"
            android:max="30"
            android:progress="10" />

        <TextView
            android:id="@+id/flow_main_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/flow_main_progressBar"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:text="@string/flow_main_percent"
            android:textColor="#07ff00"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/flow_notice_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/flow_notice_today"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/flow_notice_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/flow_notice_today"
            android:layout_marginBottom="10dp"
            android:text="@string/flow_notice_month"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/flow_notice_remain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/flow_notice_month"
            android:text="@string/flow_notice_remain"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/flow_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@id/flow_notice_today"
            android:text="@string/flow_num"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/flow_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/flow_today"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@id/flow_notice_month"
            android:text="@string/flow_num"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/flow_remain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/flow_month"
            android:layout_toRightOf="@id/flow_notice_remain"
            android:text="@string/flow_num"
            android:textColor="#000"
            android:textSize="18sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/flow_main_showList"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/w_btn"
        android:text="@string/flow_main_showList"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/flow_main_history"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/w_btn"
        android:text="@string/flow_main_history"
        android:textColor="#000000"
        android:textSize="18sp" />

</LinearLayout>