<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/flow_set_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/flow_set_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/flow_set_head"
        android:gravity="center_horizontal" >

        <EditText
            android:id="@+id/flow_set_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/flow_set_input"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flow_M" />
    </LinearLayout>

</RelativeLayout>