<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white">
           <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="40dp"
	    android:background="@drawable/title_bg"
    android:gravity="center">
	    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/black_title"
        style="@style/title_text"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp">
	    <TextView 
	        android:layout_width="70dp"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/block_id"
	        android:textSize="20sp"
	        android:textColor="#000000"
	        android:textStyle="bold"/>
	    <TextView 
	        android:layout_width="170dp"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/block_num"
	        android:textColor="#000000"
	        android:textSize="20sp"
	        android:textStyle="bold"/>
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textColor="#000000"
	        android:text="@string/block_kind"
	        android:textSize="20sp"
	        android:textStyle="bold"/>
    </LinearLayout>
    <ListView 
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollingCache="true"
        android:divider="@drawable/line"/>
    
</LinearLayout>