<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F4F5"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/title_bg"
        android:gravity="center" >

        <TextView
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/lock_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lock_icon"
            android:textColor="@color/lock_text_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lock_name"
            android:textColor="@color/lock_text_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/lock_state"
            android:textColor="@color/lock_text_color"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line"
        android:contentDescription="@null" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:divider="@drawable/line"
        android:scrollingCache="true"
        android:textColor="@color/lock_text_color" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line"
        android:contentDescription="@null" />

    <Button
        android:id="@+id/lock_select_update"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/g_btn"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/lock_update"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>