<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/phone_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/title_bg"
        android:gravity="center" >

        <TextView
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/pintercept_title" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp" >

        <Button
            android:id="@+id/phone_intercept_btn"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="2dp"
            android:background="@drawable/g_btn"
            android:text="@string/phone_intercept_btn"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/phone_intercept_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toLeftOf="@id/phone_intercept_btn"
            android:background="@drawable/add_black_bg"
            android:hint="@string/phone_intercept_ht"
            android:inputType="phone"
            android:textColor="#000000" />
    </RelativeLayout>

    <TextView
        android:id="@+id/phone_intercept_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/phone_intercept_head"
        android:textColor="#000" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:divider="@drawable/line" >
    </ListView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/line_" />

</LinearLayout>