<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/grey"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:text="@string/code_"
            android:textColor="#000000"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:contentDescription="@null"
            android:src="@drawable/line_" />

        <EditText
            android:id="@+id/lock_code"
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/pcode_input"
            android:gravity="center"
            android:inputType="numberPassword"
            android:textColor="#000000" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@null"
            android:src="@drawable/line_" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/lock_ok"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/g_btn"
                android:text="@string/lock_ok" />

            <Button
                android:id="@+id/lock_cancel"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/g_btn"
                android:text="@string/lock_cancel" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:visibility="gone" />

</LinearLayout>